--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
-spring.datasource.url=jdbc:h2:mem:jugadores
+spring.datasource.url=jdbc:h2:mem:tarifas
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=1235
 spring.h2.console.enabled=true
 #variable_env=${variable_env}
 variable_env=test
-server.port=8089
-base_url=http://localhost:8089/jugadores
+server.port=8088
+base_url=http://localhost:8088/tarifas
 #http://localhost:8080/h2-console
 
 # MySQL
-#spring.datasource.url=jdbc:mysql://localhost:3306/spring
-#spring.datasource.username=root
-#spring.datasource.password=Nelson30
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/tpe_especial_arq
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
