Correcion de servicios andando por ahora

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-spring.datasource.url=jdbc:h2:mem:tarifas
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=root
-spring.datasource.password=1235
-spring.h2.console.enabled=true
-#variable_env=${variable_env}
+#spring.datasource.url=jdbc:h2:mem:tarifas
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=root
+#spring.datasource.password=1235
+#spring.h2.console.enabled=true
+variable_env=${variable_env}
 variable_env=test
 server.port=8088
-base_url=http://localhost:8088/tarifas
+
+# 192.168.0.104
+base_url=http://localhost:8088/tarifa
 #http://localhost:8080/h2-console
 
 # MySQL
@@ -16,3 +18,8 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# para la documentacion
+# spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+#springdoc.swagger-ui.path=/swagger-ui.html
