Implementando jwt no me anda el token

--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #spring.datasource.password=1235
 #spring.h2.console.enabled=true
 variable_env=${variable_env}
-#variable_env=test
+variable_env=test
 server.port=8088
 
 # 192.168.0.104
@@ -21,4 +21,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # para la documentacion
 # spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-springdoc.swagger-ui.path=/swagger-ui.html
+
+#springdoc.swagger-ui.path=/swagger-ui.html
