Se agrega el token a tarifa y la documentacion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.jpa.hibernate.ddl-auto=update
 # para la documentacion
 # spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# se configura para usar JWT 
+#spring.security.jwt.secret=secret
+#spring.security.jwt.resource-ids=jwt
