Comenta codigo para que quede andando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,14 @@
 variable_env=${variable_env}
 #variable_env=test
 server.port=8088
+token=http://localhost:8098
 
 # 192.168.0.104
 base_url=http://localhost:8088/tarifa
 #http://localhost:8080/h2-console
 
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/tpe_especial_arq
+spring.datasource.url=jdbc:mysql://localhost:3306/bbdd_tarifa
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
